[package]
name = "sp-multihash-derive"
version = "0.2.0"
edition = "2018"
authors = ["Samuel Burnham <sam@yatima.io>"]
license = "MIT"
repository = "https://github.com/yatima-inc/sp-multihash"
description = "Proc macro for deriving custom sp-multihash tables"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.24", features = ["span-locations"] }
proc-macro-crate = "1.0.0"
proc-macro-error = "1.0.4"
quote = "1.0.7"
syn = "1.0.42"
synstructure = "0.12.4"

[features]
default = []
std = []

[dev-dependencies]
pretty_assertions = "0.7.1"
sp-multihash = { path = ".." }
